# project_w

./: .gitignore  clocks_today_products.json  exchange_rate.py  find_cartier_csv.py  find_cartier_xlsx.py  main.py  products.json  products_table.csv  products_table_accessories.csv  products_table_clocks_today.csv  products_table_clocks_today.xlsx  products_table_jewellery.xlsx  pyproject.toml  requirements.txt  Аксессуары.json  Швейцарские часы.json  Ювелирные украшения.json
data/: products_table.xlsx  products_table_accessories.xlsx  products_table_jewellery.csv
src/: main.py  test.py  visualize.py
